# agent-runner

./: .env  .env.email-assistant  .env.example  .env.host  .gitignore  .mcp.json  DEPLOYMENT_GUIDE.md  Dockerfile  PHASE1_DEPLOYMENT.md  PHASE2_DEPLOYMENT.md  PHASE3_DEPLOYMENT.md  README.md  RUN_TEST.md  SYSTEM_TEST_SUMMARY.md  TEMPORAL_README.md  actor_status.py  agent_registry.py  agents.py  api.py  create_test_schedule.py  cron_prefetch.py  docker-compose.temporal.yml  docker-compose.yaml  docker-compose.yml  entrypoint.sh  hooks.py  invoice_prefetch.py  monitoring.py  pytest.ini  refresh-token.sh  requirements.txt  run-agent.sh  schedule.sh  sdk_executor.py  sdk_runner.py  temporal-worker.service  test_appointment_workflow.py  test_mcp.py  trigger_test.py
config/: agents.yaml
dashboard/: index.html  package.json  vite.config.js
docs/: ARCHITECTURE.md  EVALUATION.md  LANGGRAPH.md  MEMORY.md
evaluation/: __init__.py  braintrust_integration.py
mcp-servers/google-ads-shopping-mcp/: .mcp.json  README.md  create_campaigns.py  pyproject.toml  requirements.txt  test_server.py  update_product_groups.py  update_product_groups_v2.py
mcp-servers/google-ads-shopping-mcp/google_ads_shopping_mcp/: __init__.py  config.py  coordinator.py  server.py
mcp-servers/google-ads-shopping-mcp/google_ads_shopping_mcp/security/: __init__.py  validator.py
mcp-servers/google-ads-shopping-mcp/google_ads_shopping_mcp/tools/: __init__.py  ad_groups.py  campaigns.py  keywords.py  product_groups.py
mcp-servers/google-ads-shopping-mcp/tests/: __init__.py  test_validation.py
(+164 files in other folders)
